// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValueCard > renders default as expected 1`] = `
<div>
  <div
    class="value-card container-lined w-[437px] h-[296px] p-6 flex flex-col gap-[27px]"
  >
    <div
      class="value-card__icon-wrapper w-[50px] h-[50px] flex items-center justify-center"
    >
      <img
        alt="Test Title"
        class="value-card__icon"
        src="/icons/test-icon.svg"
      />
    </div>
    <h3
      class="value-card__title font-reckless text-2xl font-[450] leading-[26.9px] text-left text-bluedot-normal"
    >
      Test Title
    </h3>
    <p
      class="value-card__description font-roobert text-base font-normal leading-[20.22px] text-left"
    >
      Test description
    </p>
  </div>
</div>
`;

exports[`ValueCard > renders with all props correctly 1`] = `
<div>
  <div
    class="value-card container-lined w-[437px] h-[296px] p-6 flex flex-col gap-[27px]"
  >
    <div
      class="value-card__icon-wrapper w-[50px] h-[50px] flex items-center justify-center"
    >
      <img
        alt="Custom Title"
        class="value-card__icon"
        src="/icons/custom-icon.svg"
      />
    </div>
    <h3
      class="value-card__title font-reckless text-2xl font-[450] leading-[26.9px] text-left text-bluedot-normal"
    >
      Custom Title
    </h3>
    <p
      class="value-card__description font-roobert text-base font-normal leading-[20.22px] text-left"
    >
      Custom description text that is longer
    </p>
  </div>
</div>
`;
